1. Poll with parameter offsetIndex 2. New config http.sleep.interval for sleeping when no unseen record to commit. Default is 60s